Fix team logos being squished depending on aspect ratio

--- a/src/app/team-logo/team-logo.component.scss
+++ b/src/app/team-logo/team-logo.component.scss
@@ -1,6 +1,6 @@
 .team-logo {
-    width: 40px;
-    height: 40px;
+    max-width: 40px;
+    max-height: 40px;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
